# embedding_mesh_generation_through_cut_cell

./: .gitignore  CMakeLists.txt  embedding_mesh.cpp  embedding_mesh.h  key_comparison.h  main.cpp  mesh_write.cpp  union_find_set.h  voxel.cpp
doc/: CMakeLists.txt  Doxyfile
