CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(demo)

SET(CMAKE_BUILD_TYPE "Debug")
set(CMAKE_CXX_FLAGS "-Wall -std=c++11")
set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNDEBUG")

# ADD_DEFINITIONS(-DSEPERATE_CELL)
ADD_LIBRARY(embed voxel.cpp embedding_mesh.cpp mesh_write.cpp)
ADD_EXECUTABLE(demo main.cpp)
TARGET_LINK_LIBRARIES(demo embed)

SET_TARGET_PROPERTIES(demo
  PROPERTIES
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")

ADD_SUBDIRECTORY(doc EXCLUDE_FROM_ALL)
